# rustcube

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yaml
debug/: rustcube.gdb
debugger/: Cargo.toml  app.rs  app.ui  background.rs  main.rs  style.css
debugger/gobject/: breakpoint_object.rs  callstack_object.rs  disassembled_instruction.rs  memory_dump_object.rs  mod.rs
rustcube/: all.html  index.html  sidebar-items.js
rustcube/audio_interface/: constant.CONTROL_STATUS.html  index.html  sidebar-items.js  struct.AudioInterface.html  struct.ControlRegister.html
rustcube/command_processor/: index.html  sidebar-items.js  struct.CommandProcessor.html
rustcube/cpu/: constant.NUM_FPR.html  constant.NUM_GPR.html  constant.NUM_GQR.html  constant.NUM_SR.html  enum.Exception.html  fn.mask.html  index.html  sidebar-items.js  struct.Cpu.html
rustcube/debugger/: fn.install_sigint_handler.html  fn.sigint_handler.html  index.html  sidebar-items.js  static.SIGINT.html  static.SIGINT_ONCE.html  struct.ConsoleDebugger.html  struct.DummyDebugger.html  trait.Debugger.html
rustcube/dol/: constant.NUM_DATA.html  constant.NUM_TEXT.html  index.html  sidebar-items.js  struct.Dol.html  struct.Header.html
src/: ai.rs  audio_interface.rs  command_processor.rs  cpu.rs  debugger.rs  di.rs  disc.rs  dol.rs  dsp.rs  dsp_interface.rs  dvd_interface.rs  exi.rs  gamecube.rs  gp_fifo.rs  interconnect.rs  lib.rs  main.rs  mem.rs  memory.rs  memory_interface.rs  pe.rs  pi.rs  pixel_engine.rs  processor_interface.rs  serial_interface.rs  si.rs  timers.rs  utils.rs  vi.rs  video_interface.rs
src/cpu/: cpu.rs  cr.rs  (+29 more)
(+262 files in other folders)
