[package]
name = "rustcube"
version = "0.1.0"
authors = ["Michael Sierks <msierks@117@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "rustcube"
doc = false

[dependencies]
bitfield = "0.13"
byteorder = "0.4"
gdbstub = {version = "0.4", optional = true}
getopts = "0.2"

[features]
default = ["gdb"]
gdb = ["gdbstub"]
