[package]
name = "rustcube"
version = "0.1.0"
authors = ["Michael Sierks <msierks@117@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "rustcube"
doc = false

[dependencies]
bitfield = "0.13"
byteorder = "0.4"
env_logger = "0.8.2"
gdbstub = {version = "0.4", optional = true}
getopts = "0.2"
log = { version = "0.4", features = ["std"] }

[features]
default = ["gdb"]
gdb = ["gdbstub"]

[profile.dev]
opt-level = 3
overflow-checks = true