[package]
name = "rustcube"
version = "0.1.0"
authors = ["Michael Sierks <msierks@117@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "rustcube"
doc = false

[dependencies]
bitfield = "0.14"
byteorder = "0.4"
getopts = "0.2"
env_logger = "0.8.2"
minifb = "0.10.0"
num = "0.1"
nix = "0"
rustyline = "1.0.0"
log = { version = "0.4", features= ["std"] }

[profile.dev]
opt-level = 3
overflow-checks = true
