[package]
name = "debugger"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "1.7"
once_cell = "1.0"
rustcube = { path = "../" }
env_logger = "0.8.2"
getopts = "0.2"
log = { version = "0.4", features = ["std"] }

[[bin]]
name = "debugger"
path = "main.rs"

[dependencies.gtk]
package = "gtk4"
version = "*"
features = ["v4_2"]
